--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,10 @@ h4 {
   font-weight: 600;
   margin-bottom: 2.4rem;
 }
-
+.info {
+  margin: 1em 0;
+  font-size: 1.5rem;
+}
 .start {
   display: flex;
   flex-direction: column;
